2008-03-12  Tor Lillqvist  <tml@novell.com>

	Bug 520914 - win_iconv doesn't support UCS-2
	
	* glib/win_iconv.c: Make UCS-2 just an alias for
	UTF-16. Technically this is wrong of course, but shouldn't matter
	an awful lot in practice.

2008-03-11  Murray Cumming  <murrayc@murrayc.com>

	Bug 521591 – g_markup_parse_context_parse() creates GError message that 
	is invalid UTF8.

	* glib/gmarkup.c (set_error): Make sure that the GError::message is 
	valid UTF-8 even if it is complaining about invalid UTF-8 in the 
	markup text, using _g_utf8_make_valid().

2008-03-10  Matthias Clasen  <mclasen@redhat.com>
	
	* === Released 2.16.1 ===

	* configure.in: Bump version

	* NEWS: Updates

	* glib/pcre/*: Update the internal copy of PCRE to 7.6, this time
	for real.

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.16.0 ===

	* NEWS: Updates

	* configure.in: Bump version to 2.16.0

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/gslist.c: Fix a doc typo

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* glib/giochannel.c (g_io_channle_set_encoding): Fix confusing
	error message.  (#521028, Peter Kjellerstedt)

2008-03-10  Matthias Clasen  <mclasen@redhat.com>

	* tests/testglib.c: Still set the udddocs and uddpubshare 
	variables for the verbose case.

2008-03-07  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
	Look for struct statfs.f_fstypename

2008-03-07  Tor Lillqvist  <tml@novell.com>

	* README.win32: Updates.

2008-03-05  Tor Lillqvist  <tml@novell.com>

	* glib/glib.symbols: Remove g_uri_get_scheme.

2008-03-04  Alexander Larsson  <alexl@redhat.com>

        * glib/gurifuncs.c:
	Remove deprecated symbols we kept for one release.

2008-03-03  Matthias Clasen  <mclasen@redhat.com>

	* glib/gutils.h: Add a version of G_INLINE_FUNC for
	__GNUC__ && __GNUC_STDC_INLINE__, patch by Jakub Jelinek

2008-03-03  Tor Lillqvist  <tml@novell.com>

	* glib/gspawn-win32.c (read_helper_report): Must set the GError